tests/compile_fail/lit_v_factory_removed.cpp
#include <ptn/patternia.hpp>

int main() {
  auto v = ptn::lit_v<1>();
  (void)v;
  return 0;
}
